--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" href="#">About US</a>
           </li>
 
           <!-- Dropdown for services -->
@@ -39,28 +39,28 @@
               Our Services
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Cloud Solutions</a></li>
-              <li><a class="dropdown-item" href="#">Data Center Solutions</a></li>
-              <li><a class="dropdown-item" href="#">App Modernization</a></li>
-              <li><a class="dropdown-item" href="#">Cybersecurity</a></li>
-              <li><a class="dropdown-item" href="#">Compliance & Audit</a></li>
-              <li><a class="dropdown-item" href="#">Analytics & Insights</a></li>
+              <li><a class="dropdown-item" href="#services">Cloud Solutions</a></li>
+              <li><a class="dropdown-item" href="#services">Data Center Solutions</a></li>
+              <li><a class="dropdown-item" href="#services">App Modernization</a></li>
+              <li><a class="dropdown-item" href="#services">Cybersecurity</a></li>
+              <li><a class="dropdown-item" href="#services">Compliance & Audit</a></li>
+              <li><a class="dropdown-item" href="#services">Analytics & Insights</a></li>
 
             </ul>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Our Projects</a>
+            <a class="nav-link" href="#projects">Our Projects</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="#footer-contact">Contact US</a>
           </li>
         </ul>
 
         <!-- Right side button -->
         <div class="d-lg-block text-center">
-          <a href="#" class="btn btn-success get-started-btn">Get Started</a>
+          <a href="#contact" class="btn btn-success get-started-btn">Get Started</a>
         </div>
 
       </div>
@@ -123,7 +123,7 @@
 
         <!-- Left Side: Tabs -->
         <div class="col-md-6 mb-4 mb-md-0">
-          <small class="text-uppercase text-muted">About Us</small>
+          <small class="text-uppercase text-muted">About US</small>
 
           <!-- Tabs Navigation -->
           <ul class="nav nav-tabs mt-2" id="aboutTab" role="tablist">
@@ -165,10 +165,10 @@
 
         <!-- Right Side: Image -->
         <div class="col-md-6">
-          <img src="img/AboutUS.jpg" alt="About Us Image" class="img-fluid rounded shadow">
+          <img src="img/AboutUS.jpg" alt="About US Image" class="img-fluid rounded shadow">
         </div>
 
-        <section class="our-services py-5">
+        <section class="our-services py-5" id="services">
     <div class="container">
       <!-- Heading -->
       <div class="text-center mb-5">
@@ -186,7 +186,16 @@
             </div>
             <h4>Cloud Solutions</h4>
             <p>Transform your business with scalable cloud solutions that enhance flexibility and performance.</p>
-            <a href="#" class="btn btn-primary">Read More</a>
+            <a href="#" class="btn btn-primary read-more-btn" data-target="cloud-details">Read More</a>
+            <ul id="cloud-details" class="service-details mt-3" style="display:none; text-align:left;">
+              <li>Cloud to Cloud migration</li>
+              <li>On-prem to Cloud</li>
+              <li>CSP to CSP solution</li>
+              <li>Migration Across cloud Tenant</li>
+              <li>Cloud solution</li>
+              <li>AMMP Offers</li>
+              <li>etc.</li>
+            </ul>
           </div>
         </div>
 
@@ -198,7 +207,14 @@
             </div>
             <h4>Cybersecurity</h4>
             <p>Ensure data protection and secure your digital assets with our top-tier cybersecurity solutions.</p>
-            <a href="#" class="btn btn-primary">Read More</a>
+            <a href="#" class="btn btn-primary read-more-btn" data-target="cyber-details">Read More</a>
+            <ul id="cyber-details" class="service-details mt-3" style="display:none; text-align:left;">
+              <li>Threat detection & response</li>
+              <li>Network security</li>
+              <li>Endpoint protection</li>
+              <li>Security audits</li>
+              <li>Compliance management</li>
+            </ul>
           </div>
         </div>
 
@@ -210,7 +226,14 @@
             </div>
             <h4>App Modernization</h4>
             <p>Modernize your legacy applications to meet the demands of the digital era and improve efficiency.</p>
-            <a href="#" class="btn btn-primary">Read More</a>
+            <a href="#" class="btn btn-primary read-more-btn" data-target="app-details">Read More</a>
+            <ul id="app-details" class="service-details mt-3" style="display:none; text-align:left;">
+              <li>Legacy app migration</li>
+              <li>Cloud-native development</li>
+              <li>Microservices architecture</li>
+              <li>API integration</li>
+              <li>Performance optimization</li>
+            </ul>
           </div>
         </div>
 
@@ -222,7 +245,14 @@
             </div>
             <h4>Data Center Solutions</h4>
             <p>Optimize and scale your data infrastructure for enhanced performance and uptime.</p>
-            <a href="#" class="btn btn-primary">Read More</a>
+            <a href="#" class="btn btn-primary read-more-btn" data-target="data-details">Read More</a>
+            <ul id="data-details" class="service-details mt-3" style="display:none; text-align:left;">
+              <li>Data center migration</li>
+              <li>Virtualization</li>
+              <li>Storage solutions</li>
+              <li>Disaster recovery</li>
+              <li>High availability</li>
+            </ul>
           </div>
         </div>
 
@@ -234,7 +264,14 @@
             </div>
             <h4>Compliance & Audit</h4>
             <p>Ensure your business is compliant with industry standards and regulatory frameworks.</p>
-            <a href="#" class="btn btn-primary">Read More</a>
+            <a href="#" class="btn btn-primary read-more-btn" data-target="compliance-details">Read More</a>
+            <ul id="compliance-details" class="service-details mt-3" style="display:none; text-align:left;">
+              <li>Regulatory compliance (GDPR, HIPAA, etc.)</li>
+              <li>Internal audits</li>
+              <li>Risk assessment</li>
+              <li>Policy development</li>
+              <li>Continuous monitoring</li>
+            </ul>
           </div>
         </div>
 
@@ -246,13 +283,20 @@
             </div>
             <h4>Analytics & Insights</h4>
             <p>Unlock actionable insights to drive smarter business decisions with advanced analytics.</p>
-            <a href="#" class="btn btn-primary">Read More</a>
+            <a href="#" class="btn btn-primary read-more-btn" data-target="analytics-details">Read More</a>
+            <ul id="analytics-details" class="service-details mt-3" style="display:none; text-align:left;">
+              <li>Business intelligence</li>
+              <li>Data visualization</li>
+              <li>Predictive analytics</li>
+              <li>Custom dashboards</li>
+              <li>Reporting solutions</li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
 
-<section class="projects-section py-5">
+<section class="projects-section py-5" id="projects">
   <div class="container text-center">
     <h2 class="section-title mb-3">Our Projects</h2>
 
@@ -328,46 +372,48 @@
   </div>
 
 
-  <section class="contact-section py-5">
+  <section class="contact-section py-5" id="contact">
   <div class="container">
     <div class="row align-items-stretch">
-      
 
       <!-- Contact Form -->
       <div class="col-lg-6 mb-4 mb-lg-0">
         <h2 class="mb-4">Contact Us</h2>
-        <form>
+        <form action="https://formspree.io/f/xrblewjv" method="POST" id="contactForm">
           <div class="row mb-3">
             <div class="col-md-6">
-              <input type="text" class="form-control" placeholder="Your Name" required>
+              <input type="text" name="name" class="form-control" placeholder="Your Name" required>
             </div>
             <div class="col-md-6">
-              <input type="email" class="form-control" placeholder="Your Email" required>
+              <input type="email" name="email" class="form-control" placeholder="Your Email" required>
             </div>
           </div>
           <div class="mb-3">
-            <input type="text" class="form-control" placeholder="Subject" required>
+            <input type="text" name="subject" class="form-control" placeholder="Subject" required>
           </div>
           <div class="mb-3">
-            <textarea class="form-control" rows="5" placeholder="Your Message" required></textarea>
+            <textarea name="message" class="form-control" rows="5" placeholder="Your Message" required></textarea>
           </div>
           <button type="submit" class="btn btn-primary">Send Message</button>
         </form>
+        <div id="thankYouMessage" style="display:none; color:green; font-weight:bold;">
+          Thanks for your email, Our team will contact you shortly.
+        </div>
       </div>
 
       <!-- Map or Info Panel -->
       <div class="col-lg-6">
         <div class="contact-map shadow-sm rounded">
           <!-- Google Map iframe (you can replace this with actual map) -->
-          <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241317.11609862562!2d72.7410999!3d19.0821978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7ce18977b6e5d%3A0x60c4c6f6b19190e2!2sMumbai%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1687712520487!5m2!1sen!2sin"
-            width="100%" 
-            height="100%" 
-            style="border:0;" 
-            allowfullscreen="" 
-            loading="lazy" 
-            referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
+          <iframe
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3501.352885770651!2d77.08075807537713!3d28.51724607574025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d18a3e5e5e5e5%3A0x7e7e7e7e7e7e7e7e!2sSector%2057%2C%20Gurugram%2C%20Haryana%20122011%2C%20India!5e0!3m2!1sen!2sin!4v1721640000000!5m2!1sen!2sin"
+  width="100%"
+  height="100%"
+  style="border:0;"
+  allowfullscreen=""
+  loading="lazy"
+  referrerpolicy="no-referrer-when-downgrade">
+</iframe>
         </div>
       </div>
 
@@ -400,9 +446,9 @@
       </div>
 
       <!-- Contact Info + Social -->
-      <div class="col-md-4 mb-4">
+      <div class="col-md-4 mb-4" id="footer-contact">
         <h5>Contact</h5>
-        <p><i class="fas fa-map-marker-alt me-2"></i> Sushant Lok, Sector 57, Gurugram</p>
+        <p><i class="fas fa-map-marker-alt me-2"></i>Sector 57, Gurugram</p>
         <p><i class="fas fa-envelope me-2"></i> info@infimaxia.com & infimaxia@gmail.com</p>
         <p><i class="fas fa-phone me-2"></i> +91 9456660075</p>
 
@@ -427,7 +473,6 @@
       </div>
     </div>
   </section>
-
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
