--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       
       <!-- Logo -->
       <a class="navbar-brand" href="#">
-        <img src="img/Clogo2.png" alt="Infimaxia" height="60">
+        <img src="img/clogo2.png" alt="Infimaxia" height="60">
       </a>
 
       <!-- Toggler -->
