--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+  <meta name="google-site-verification" content="aLtkqwojOYmnQwQNNHS96UZHE6G8nlhi8UGo7dXvBg8" />
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
     <div class="container">
