--- a/index1.html
+++ b/index1.html
@@ -6,14 +6,27 @@
   <title>Infimaxia</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
+  <div class="bg-light py-2">
+  <div class="container d-flex justify-content-start align-items-center">
+    <span class="me-3 d-flex align-items-center">
+      <i class="fas fa-envelope me-2"></i>
+      <a href="mailto:info@infimaxia.com" class="text-dark fw-bold" style="text-decoration:none;">info@infimaxia.com</a>
+    </span>
+    <a href="#" class="me-2 social-top"><i class="fab fa-facebook-f"></i></a>
+    <a href="#" class="me-2 social-top"><i class="fab fa-x-twitter"></i></a>
+    <a href="#" class="me-2 social-top"><i class="fab fa-instagram"></i></a>
+    <a href="#" class="me-2 social-top"><i class="fab fa-linkedin-in"></i></a>  
+  </div>
+</div>
   <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
     <div class="container">
       
       <!-- Logo -->
-      <a class="navbar-brand" href="#">
-        <img src="img/clogo2.png" alt="Infimaxia" height="60">
+      <a class="navbar-brand" href="https://www.infimaxia.com/">
+        <img src="img/Clogo2.png" alt="Infimaxia" height="60">
       </a>
 
       <!-- Toggler -->
@@ -57,12 +70,16 @@
             <a class="nav-link" href="#footer-contact">Contact US</a>
           </li>
         </ul>
-
         <!-- Right side button -->
-        <div class="d-lg-block text-center">
-          <a href="#contact" class="btn btn-success get-started-btn">Get Started</a>
-        </div>
-
+         <div class="d-lg-flex align-items-center">
+          <a href="#contact" class="btn btn-success get-started-btn me-3">Get Started</a>
+           <span class="d-flex align-items-center">
+            <span class="phone-icon-bg me-2">
+              <i class="fas fa-phone-alt fa-flip-horizontal phone-shake"></i>
+            </span>
+    <a href="tel:+919456660075" class="phone-number fw-bold text-dark" style="text-decoration:none;">+91 94566 60075</a>
+  </span>
+</div>
       </div>
     </div>
   </nav>
@@ -372,7 +389,7 @@
   </div>
 
 
-  <section class="contact-section py-5" id="contact">
+  <section class="contact-section py-5" >
   <div class="container">
     <div class="row align-items-stretch">
 
@@ -455,7 +472,7 @@
         <!-- Social Icons -->
         <div class="social-icons mt-3">
           <a href="#" class="me-2"><i class="fab fa-facebook-f"></i></a>
-          <a href="#" class="me-2"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="me-2"><i class="fab fa-x-twitter"></i></a>
           <a href="#" class="me-2"><i class="fab fa-linkedin-in"></i></a>
           <a href="#" class="me-2"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-github"></i></a>
@@ -477,4 +494,3 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
