--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       
       <!-- Logo -->
       <a class="navbar-brand" href="https://www.infimaxia.com/">
-        <img src="img/Clogo2.png" alt="Infimaxia" height="60">
+        <img src="img/clogo2.png" alt="Infimaxia" height="60">
       </a>
 
       <!-- Toggler -->
