--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="robots" content="index, follow">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Infimaxia - Leading IT Solutions and Consulting Company">
   <meta name="keywords" content="IT Solutions, Cloud Services, Cybersecurity, App Modernization, Data Center Solutions, Compliance, Analytics">
   <title>Infimaxia</title>
